--- a/css/catalog.css
+++ b/css/catalog.css
@@ -54,7 +54,9 @@
 
 
 @media (max-width: 1199px) {
-    
+    .catalog-list {
+        justify-content:space-around;
+    }
   }
   
   @media (max-width: 768px) {
@@ -63,7 +65,7 @@
         align-items: center;
     }
     .catalog-item {
-        width: 60%;
+        width: 80%;
         margin-bottom: 40px;
     }
   }
