--- a/css/catalog.css
+++ b/css/catalog.css
@@ -6,6 +6,10 @@
     padding-top: 10px
 }
 
+.catalog-title {
+    margin-top: 60px;
+}
+
 .catalog-split {
     display: flex;
     justify-content: start;
@@ -13,12 +17,10 @@
 }
 
 .catalog-ul {
-    padding:30px 40px;
+    flex-direction: column;
+    width: 22.5%;
     text-align: left;
     margin-right: 28px;
-    background-color: rgb(240, 240, 239);
-    border-radius: 20px;
-    border: 2px solid rgb(240, 240, 239);;;
 }
 .catalog-cat {
     margin-bottom: 28px;
@@ -38,45 +40,50 @@
 }
 
 .catalog-list {
+    width: 75%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     
 }
 
 .catalog-item {
-    width: 30%;
+    display: block;
+    width: 18%;
+    margin-bottom: 20px;
     border: 2px solid rgb(240, 240, 240);
-    border-radius: 20px;
     cursor: pointer;
     transition: all 0.5s ease;
     background-color: rgb(240, 240, 239);
     transition: all 0.4s ease;
+    height: 50%;
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(34, 60, 80, 0.07);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(34, 60, 80, 0.07);
+    box-shadow: 4px 4px 5px 0px rgba(34, 60, 80, 0.07);
 }
 .catalog-item:hover{
     border: 2px solid #A3CF98;  
 }
 
-.catalog-img {
-    width: 100%;
-    border-radius: 20px 20px 0 0;
+.img-wrap {
+    height: 75%;
 }
 
-.catalog-item hr {
-    margin-top: -4px;
-    border: 1px solid rgb(240, 240, 240);
+.catalog-img {
+    width: 100%;
 }
 
 .catalog-about {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    height: 25%;
     border-radius:0 0 17px 17px;
-
+    margin: auto 0;
 }
 
-.catalog-about h3 {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.catalog-about h4 {
+    font-size: 16px;
 }
 
 .catalog-about p {
@@ -91,16 +98,21 @@
     }
     .catalog-split {
         justify-content: space-around;
+        margin: 0 30px;
+    }
+    .catalog-about h4 {
+        font-size: 13px;
     }
   }
   
   @media (max-width: 768px) {
     .catalog-list {
-        flex-direction: column;
+        margin: 0 auto;
+        width: 100%;
         align-items: center;
     }
     .catalog-item {
-        width: 80%;
+        width: 45%;
         margin-bottom: 40px;
     }
     .catalog-split {
@@ -115,9 +127,13 @@
   }
     
   @media (max-width: 600px) {
-  
+    .catalog-about h4 {
+        font-size: 12px;
+    }
   }
   
   @media (max-width: 440px) {
-  
+    .catalog-about h4 {
+        font-size: 20px;
+    }
   }
