--- a/css/menu.css
+++ b/css/menu.css
@@ -1,13 +1,21 @@
 .header-menu {
   width: 100%;
   background-color: #A3CF98;
-  transform: translateY(400px);
+  transform: translateY(-600px);
   z-index: 1;
   margin-top: 80px;
   transition: all 0.4s ease;
+  -webkit-transform: translateY(-600px);
+  -moz-transform: translateY(-600px);
+  -ms-transform: translateY(-600px);
+  -o-transform: translateY(-600px);
 }
 .header-menu .header-menu:active {
-  transform: translateY(400px);
+  transform: translateY(0px);
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
 }
 
 .container {
