--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,12 +2,20 @@
   position: fixed;
   width: 100%;
   background-color: #A3CF98;
-  transform: translateY(-600px);
   margin-top: -20px;
   transition: all 0.8s ease;
-} .nav_active {
   transform: translateY(0px);
+  -webkit-transform: translateY(-000px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
+} .nav_active {
   margin-bottom: 50px;
+  transform: translateY(-600px);
+  -webkit-transform: translateY(-600px);
+  -moz-transform: translateY(-600px);
+  -ms-transform: translateY(-600px);
+  -o-transform: translateY(-600px);
 }
 
 .list {
@@ -34,7 +42,19 @@
 @media (max-width: 1199px) {
   .nav {
       background: none;
-  }
+      transform: translateY(0px);
+      -webkit-transform: translateY(-600px);
+      -moz-transform: translateY(-600px);
+      -ms-transform: translateY(-600px);
+      -o-transform: translateY(-600px);
+      
+  } .nav_active {
+      transform: translateY(0px);
+      -webkit-transform: translateY(0px);
+      -moz-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+      -o-transform: translateY(0px);
+}
   .list {
       display: block;
       padding: 36px 50px;
