--- a/css/catalog.css
+++ b/css/catalog.css
@@ -72,6 +72,10 @@
     border: 2px solid #A3CF98;  
 }
 
+.catalog-a {
+    text-decoration: none;
+}
+
 .img-wrap {
  width: 100%;
 }
@@ -83,10 +87,20 @@
 .catalog-about {
     display: flex;
     align-items: center;
+    flex-direction: column;
     justify-content: center;
     height: 100px;
     border-radius:0 0 17px 17px;
     margin: auto 0;
+}
+
+.cat-price {
+    font-size: 20px;
+    color: white;
+    background-color: #A3CF98;
+    margin-top: 10px;
+    padding: 3px 6px;
+    border-radius: 4px;
 }
 
 .catalog-about h4 {
