--- a/css/tovar.css
+++ b/css/tovar.css
@@ -89,3 +89,30 @@ table.iksweb{margin-bottom: 20px; text-decoration: none;border-collapse:collapse
   width: 32%;
   margin-bottom: 7px;
 }
+
+@media (max-width: 900px) {
+    .tovar-wrap {
+        margin: 0 20px;
+    }
+
+    .tovar-split {
+        flex-direction: column;
+    }
+    .tovar-item-split {
+      flex-direction: column;
+    }
+
+    .tovar-desc {
+        width: 100%;
+    }
+
+    .tovar-imgs {
+        width: 100%;
+    }
+  }
+  @media (max-width: 440px) {
+    table.iksweb{margin-bottom: 20px; text-decoration: none;border-collapse:collapse;width:100%;text-align:center;}
+	table.iksweb th{font-weight:normal;font-size:11px; color:#ffffff;background-color:#a3cf98;}
+	table.iksweb td{font-size:10px;color:#354251;}
+	table.iksweb td,table.iksweb th{white-space:pre-wrap;padding:5px 10px;line-height:10px;vertical-align: middle;border: 1px solid rgb(211, 211, 211);;}	table.iksweb tr:hover{background-color:#f9fafb}
+  }
